# UnitTestPlayground

./: CMakeLists.txt  GeometricShapes.cpp  GeometricShapes.h  LICENSE  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
components/Line/: Line.cpp  Line.h
components/Point/: Point.cpp  Point.h
components/Triangle/: Triangle.cpp  Triangle.h
libs/ExceptionHandler/: CMakeLists.txt  ExceptionHandler.cpp  ExceptionHandler.h
libs/FileOperations/: CMakeLists.txt  FileOperations.cpp  FileOperations.h
libs/FillAttributes/: CMakeLists.txt  FillAttributes.cpp  FillAttributes.h
libs/Logging/: CMakeLists.txt  Logging.cpp  Logging.h
